--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <main id="app">
 
 </main>
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
